// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BreedCard should match the correct snapshot 1`] = `
<div
  className="BreedCard-container activeCard"
  name={
    Object {
      "breed": "Siberian Husky",
      "img": "siberian-husky.jpg",
      "isClimber": true,
      "isCold": true,
      "isRunner": true,
      "tag": "siberian-husky",
    }
  }
  onClick={[Function]}
>
  <div
    className="breed-card-header"
  >
    <Component />
  </div>
  <div
    className="img-container"
  >
    <img
      alt="dog"
      className="breed-img"
      src="siberian-husky.jpg"
    />
  </div>
  <div
    className="breed-attr"
  >
    <div />
    <div />
    <div />
  </div>
</div>
`;

exports[`BreedCard should match the correct snapshot when the path is not "/about-breeds"  1`] = `
<div
  className="BreedCard-container "
  name={
    Object {
      "breed": "Siberian Husky",
      "img": "siberian-husky.jpg",
      "isClimber": true,
      "isCold": true,
      "isRunner": true,
      "tag": "siberian-husky",
    }
  }
  onClick={[Function]}
>
  <div
    className="breed-card-header"
  >
    <Component />
  </div>
  <div
    className="img-container"
  >
    <img
      alt="dog"
      className="breed-img"
      src="siberian-husky.jpg"
    />
  </div>
  <div
    className="breed-attr"
  >
    <div />
    <div />
    <div />
  </div>
</div>
`;
